update theme meta

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
 Theme Name: night sky
-Theme URI: 
+Theme URI: https://github.com/yramagicman/nightSky/issues 
 Description: Image credit to <a href="http://www.flickr.com/photos/nattu/3392855180/"> this guy</a> on flikr
 Version: 1
 Author: Jonathan
 Author URI: http://www.perpetuallycreative.com/web
-Tags: blue, light, dark, two-columns, one-column, custom-colors, custom-header, full-width-template, theme-options, fixed-width
+Tags: black, dark, two-columns, fixed-width
 License: GPL
 License URI:http://www.gnu.org/licenses/gpl.html
 
