fix fatal error

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Island Night
+Theme Name: Night Sky
 Theme URI: https://github.com/yramagicman/nightSky/issues 
 Description: Image credit to <a href="http://www.flickr.com/photos/nattu/3392855180/"> this guy</a> on flikr
 Version: 1
