--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: Night Sky
 Theme URI: https://github.com/yramagicman/nightSky/issues 
-Description: Image credit to <a href="http://www.flickr.com/photos/nattu/3392855180/"> this guy</a> on flikr
-Version: 1
+Description: 
+Version: 1.2
 Author: Jonathan
 Author URI: http://www.perpetuallycreative.com/web
 Tags: black, dark, two-columns, fixed-width
@@ -117,7 +117,7 @@ blockquote {
 	font: Arial, Helvetica, Geneva, sans-serif;
 	color: #fff;
 	background: url(images/header.jpg) no-repeat center center;
-	text-align: right;
+	text-align: left;
 }
 #header #blogTitle {
 	margin: 20px;
