--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Night Sky
 Theme URI: https://github.com/yramagicman/nightSky/issues 
-Description: 
+Description: A dark themme with a pretty header.
 Version: 1.2
 Author: Jonathan
 Author URI: http://www.perpetuallycreative.com/web
